user login and middleware to test if logged in and checking user role
