# type.ts
@@ -1,18 +1,23 @@
 export interface IUser {
-      id: string;
-      firstName: string;
-      secondName: string;
-      profileImage?: string; 
-      email?: string;  
-      gender: string;
-      dob: Date;
-      phoneNumber: string;
-      role: string;  
-      password: string;
-      companyId: string;
-      isActive: boolean;
-      createdAt: Date;
-      updatedAt: Date;
-      lastLogin?: Date;
+  id: string;
+  firstName: string;
+  secondName: string;
+  profileImage?: string;
+  email?: string;
+  gender: string;
+  dob: Date;
+  phoneNumber: string;
+  role: string;
+  password: string;
+  companyId: string;
+  isActive: boolean;
+  createdAt: Date;
+  updatedAt: Date;
+  lastLogin?: Date;
 }
 
+export interface ILogin {
+  email?: string;
+  phoneNumber?: string;
+  password: string;
+}
